--- a/app/src/main/res/menu/menu_mic.xml
+++ b/app/src/main/res/menu/menu_mic.xml
@@ -3,4 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context="sg.edu.nus.micphone2.MicActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_about"
+        android:title="About"
+        app:showAsAction="never"
+        />
 </menu>
