- Hacked MainActivity's Menu to navigate to MicActivity

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,4 +9,12 @@
         android:title="About"
         app:showAsAction="never"
         />
+
+    // STUB
+    // TO REMOVE BEFORE FINAL RELEASE
+    <item
+        android:id="@+id/action_Mic"
+        android:title="Mic"
+        app:showAsAction="never"
+        />
 </menu>
