--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="sg.edu.nus.micphone2.SettingsActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView android:text="This is Settings" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
