--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="sg.edu.nus.micphone2.AboutActivity">
+    tools:context="sg.edu.nus.micphone2.AboutActivity"
+    android:id="@+id/action_about">
 
     <TextView android:text="This is About" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
