--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,9 +4,38 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="sg.edu.nus.micphone2.AboutActivity">
+    tools:context="sg.edu.nus.micphone2.AboutActivity"
+    android:background="@drawable/ground">
+    <TextView
+        android:id="@+id/this_is_id_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AUDIOTONE"
 
-    <TextView android:text="This is About" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textColor="#fffbf8ff"
+        android:textSize="30sp"
+        android:textIsSelectable="false"
+        android:visibility="visible"
+        android:layout_below="@+id/imageView2"
+        android:layout_centerHorizontal="true" />
 
-</RelativeLayout>
+
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_launcher"
+        android:id="@+id/imageView2"
+        android:layout_marginTop="52dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="71dp" />
+
+</RelativeLayout >
