--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,7 +13,7 @@
     // STUB
     // TO REMOVE BEFORE FINAL RELEASE
     <item
-        android:id="@+id/action_Mic"
+        android:id="@+id/action_mic"
         android:title="Mic"
         app:showAsAction="never"
         />
