--- a/app/src/main/res/layout/activity_speaker.xml
+++ b/app/src/main/res/layout/activity_speaker.xml
@@ -6,4 +6,24 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="sg.edu.nus.micphone2.SpeakerActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/speaker_ip_address"
+        android:id="@+id/speaker_ip_address_label"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/speaker_ip_address"
+        android:layout_below="@+id/speaker_ip_address_label"
+        android:layout_alignStart="@+id/speaker_ip_address_label" />
+
+
 </RelativeLayout>
