--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
-    android:hardwareAccelerated="false">
-        <RelativeLayout
-            android:layout_width="0dip"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.15">
-        </RelativeLayout>
+    tools:context=".MainActivity">
         <RelativeLayout
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.7">
+            android:layout_weight="0.7"
+            android:layout_gravity="center">
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -38,35 +33,29 @@
                     />
 
                 <ImageView
-                android:id="@+id/dottedline"
-                android:layerType="software"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/dotted"
-                android:layout_weight="0.3"
+                    android:id="@+id/dottedline"
+                    android:layerType="software"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/dotted"
+                    android:layout_weight="0.3"
                 />
 
                 <Button
-                android:id="@+id/angry_btn"
-                android:text="Join a speaker"
-                android:textColor="#FFFFFF"
-                android:textSize="25sp"
-                android:textStyle="italic"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/buttonshape"
-                android:shadowColor="#A8A8A8"
-                android:shadowRadius="5"
-                android:layout_centerHorizontal="true"
-                android:onClick="joinSpeaker"
-                android:layout_weight="0.35">
+                    android:id="@+id/angry_btn"
+                    android:text="Join a speaker"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
+                    android:textStyle="italic"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/buttonshape"
+                    android:shadowColor="#A8A8A8"
+                    android:shadowRadius="5"
+                    android:onClick="joinSpeaker"
+                    android:layout_weight="0.35">
                 </Button>
         </LinearLayout>
     </RelativeLayout>
-        <RelativeLayout
-        android:layout_width="0dip"
-        android:layout_height="fill_parent"
-        android:layout_weight="0.15">
-        </RelativeLayout>
 </LinearLayout>
 
