--- a/app/src/main/res/layout/activity_pairing.xml
+++ b/app/src/main/res/layout/activity_pairing.xml
@@ -5,6 +5,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="sg.edu.nus.micphone2.PairingActivity">
+    
+    <ViewPager
+        android:id="@+id/pairing_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ViewPager>
 
     <Button
         android:layout_width="wrap_content"
