--- a/app/src/main/res/layout/activity_speaker.xml
+++ b/app/src/main/res/layout/activity_speaker.xml
@@ -25,5 +25,13 @@
         android:layout_below="@+id/speaker_ip_address_label"
         android:layout_alignStart="@+id/speaker_ip_address_label" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/speaker_qr_code"
+        android:layout_below="@+id/speaker_ip_address"
+        android:layout_alignParentStart="true"
+        android:contentDescription="@string/speaker_qr_code"/>
+
 
 </RelativeLayout>
