--- a/app/src/main/res/layout/activity_pairing.xml
+++ b/app/src/main/res/layout/activity_pairing.xml
@@ -1,39 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="sg.edu.nus.micphone2.PairingActivity">
-    
-    <ViewPager
+
+    <android.support.v4.view.ViewPager
         android:id="@+id/pairing_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </ViewPager>
+        <android.support.v4.view.PagerTitleStrip
+            style="@style/AppViewPagerTitleStrip"
+            android:id="@+id/pairing_pager_title_strip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="?attr/colorPrimary"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pairing_choice_nfc"
-        android:id="@+id/pairing_choice_nfc"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    </android.support.v4.view.ViewPager>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pairing_choice_qr_code"
-        android:id="@+id/pairing_choice_qr_code"
-        android:layout_below="@+id/pairing_choice_nfc"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pairing_choice_manual"
-        android:id="@+id/pairing_choice_manual"
-        android:layout_below="@+id/pairing_choice_qr_code"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+</LinearLayout>
