--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,8 @@
         <item name="windowActionBarOverlay">true</item>
     </style>
 
+    <style name="AppViewPagerTitleStrip">
+        <item name="android:textColor">@android:color/primary_text_dark</item>
+    </style>
+
 </resources>
