- Changed wording in AboutActivity to black

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -15,7 +15,7 @@
         android:text="MicPhoneV2"
 
 
-        android:textColor="#fffbf8ff"
+        android:textColor="#000000"
         android:textSize="30sp"
         android:textIsSelectable="false"
         android:visibility="visible"
