Changed Colors of Button in MainActivity

--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -6,7 +6,7 @@
         android:radius="19dp"
         />
 
-    <solid android:color="#8e44ad"
+    <solid android:color="#673ab7"
         />
 
     <padding
