- Bold text in activity_about.xml - Changed colours of text in activity_about.xml

--- a/app/src/main/res/layout/activity_mic.xml
+++ b/app/src/main/res/layout/activity_mic.xml
@@ -3,9 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_centerInParent="true"
     tools:context="sg.edu.nus.micphone2.MicActivity">
 
-    <TextView android:text="@string/mic_connected" android:layout_width="wrap_content"
+    <TextView android:text="@string/mic_connected"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <Button
