--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -17,7 +17,7 @@
         android:text="MicPhoneV2"
 
 
-        android:textColor="#ffffffff"
+        android:textColor="#E1BEE7"
         android:textSize="30sp"
         android:textIsSelectable="false"
         android:visibility="visible"
@@ -33,7 +33,8 @@
         android:layout_below="@id/this_is_id_name"
         android:text="Built During NUS Hackathon 2015"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffffffff" />
+        android:textColor="#E1BEE7"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/teamName"
@@ -44,7 +45,8 @@
         android:layout_below="@id/eventName"
         android:text="Team Burden"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffffffff" />
+        android:textColor="#E1BEE7"
+        android:textStyle="bold" />
 
 
 
