Polished SpeakerActivity layout.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,14 +10,13 @@
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </FrameLayout>
 
     <TextView
         android:id="@+id/setting_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nothing to Set Here :P"
+        android:text="@string/settings_nothing_to_set_here"
         android:layout_centerInParent="true"
         android:textAlignment="gravity"
         android:textIsSelectable="true" />
