--- a/app/src/main/res/layout/activity_speaker.xml
+++ b/app/src/main/res/layout/activity_speaker.xml
@@ -6,32 +6,51 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="sg.edu.nus.micphone2.SpeakerActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/speaker_ip_address"
-        android:id="@+id/speaker_ip_address_label"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/speaker_ip_address"
-        android:layout_below="@+id/speaker_ip_address_label"
-        android:layout_alignStart="@+id/speaker_ip_address_label" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/speaker_ip_address"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:id="@+id/speaker_ip_address_label" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/speaker_qr_code"
-        android:layout_below="@+id/speaker_ip_address"
-        android:layout_alignParentStart="true"
-        android:contentDescription="@string/speaker_qr_code"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/speaker_ip_address" />
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:src="@drawable/speaker_divider"
+            android:contentDescription="@string/divider"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:id="@+id/speaker_qr_code"
+            android:contentDescription="@string/speaker_qr_code"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/speaker_disconnect" />
+
+    </LinearLayout>
 
 </RelativeLayout>
