--- a/app/src/main/res/layout/activity_mic.xml
+++ b/app/src/main/res/layout/activity_mic.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,15 +6,44 @@
     android:layout_centerInParent="true"
     tools:context="sg.edu.nus.micphone2.MicActivity">
 
-    <TextView android:text="@string/mic_connected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/verifyDisconnect"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/mic_disconnect"
-        android:onClick="verifyDisconnect"/>
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <TextView android:text="@string/mic_connected"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:src="@drawable/mic_icon"
+            android:contentDescription="@string/mic_icon"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:gravity="center"
+            android:text="@string/mic_connect_description"/>
+
+        <Button
+            android:id="@+id/verifyDisconnect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/mic_disconnect"
+            android:onClick="verifyDisconnect"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
